# agent-sql-khipu_ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  INITIAL.md  LICENSE  PROGRESS.md  docker-compose.yml  pyproject.toml  readme.md
config/: config.py
services/database/: README.md
services/frontend/: README.md
services/query/: README.md
services/rag/: README.md
src/components/: query_interface.py
src/layouts/: header.py
src/pages/: Home.py
src/utils/: llm_provider.py
src/utils/chatbot/: chains.py  prompts.py  response.py
